WIP: Authentication & Encryption

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multi-proto-grpc-server",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -21,9 +21,11 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/proto-loader": "^0.3.0",
-    "grpc": "^1.12.4"
+    "grpc": "^1.12.4",
+    "jsonwebtoken": "^8.3.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^7.2.8",
     "grunt": "^1.0.3",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
