--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "multi-proto-grpc-server",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
     "start": "node ./test-server.js",
-    "build": "grunt"
+    "build": "grunt --force"
   },
   "repository": {
     "type": "git",
